# touchstones

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: coverage.md  curation_review.md
src/touchstones/: __init__.py  corpus.py  io.py  schema.py
src/touchstones/data/: entries.json
tests/: test_corpus.py  test_schema.py
