[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touchstones"
version = "0.0.1"
description = "A curated corpus of canonical reference artifacts across human knowledge domains"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Steven Fazzio" },
]
keywords = ["corpus", "dataset", "benchmark", "embeddings", "nlp", "pydata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
pandas = ["pandas>=2"]
dev = [
    "pytest>=8",
    "ruff>=0.5",
    "tiktoken>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/touchstones"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
